<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include
        android:id="@+id/title_base"
        layout="@layout/title_base" />

    <ImageView
        android:id="@+id/iv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_150"
        android:src="@mipmap/login" />

    <TextView
        android:id="@+id/tv_pick"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_35"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_50"
        android:background="@drawable/shape_rectangle_with_radius"
        android:gravity="center"
        android:text="@string/citySelection"
        android:textColor="#000" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_35"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_50"
        android:background="@drawable/shape_rectangle_with_radius"
        android:gravity="center"
        android:text="@string/timeSelection"
        android:textColor="#000" />

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_35"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_50"
        android:background="@drawable/shape_rectangle_with_radius"
        android:gravity="center"
        android:text="@string/langusge"
        android:textColor="#000" />
</LinearLayout>