<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/iten_base"/>

    <RelativeLayout
            android:padding="@dimen/dp_15"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:id="@+id/et_regular_phone"
                android:gravity="center"
                android:hint="@string/regular_phone"
                android:textSize="@dimen/sp_10"
                android:layout_width="match_parent"
                android:background="@drawable/a_border"
                android:layout_height="@dimen/dp_30"/>

        <TextView
                android:id="@+id/tv_regular_test"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/bank_car"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/et_regular_phone"
                android:layout_width="@dimen/dp_60"
                android:layout_height="wrap_content"
                android:text="@string/regular_test"/>

        <TextView
                android:layout_marginTop="@dimen/dp_10"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tv_regular_test"
                android:id="@+id/tv_formatting_phone"
                android:text="格式化"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:padding="@dimen/dp_3"
                android:id="@+id/tv_regular_formatting_phone"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/bank_car"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tv_formatting_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regular_formatting_phone"/>

    </RelativeLayout>

</LinearLayout>